# monitor-core

./: configure.ac
gmond/modules/: Makefile.am
gmond/modules/cppmr/: Makefile.am  mod_cppmr.c
gmond/modules/mux/: Makefile.am  mod_mux.c
